--- a/permission-library/src/main/AndroidManifest.xml
+++ b/permission-library/src/main/AndroidManifest.xml
@@ -12,11 +12,9 @@
         android:maxSdkVersion="22" />
 
     <uses-permission-sdk-23
-        android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="28" />
+        android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission-sdk-23
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="28" />
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-permission
         android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
